--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
     "client": "cd client && npm start",
-    "install": "concurrently \"cd client && npm install\" \"cd server && npm install\""
+    "install": "concurrently \"cd client && npm install\" \"cd server && npm install\"",
+    "heroku-prebuild": "npm install --dev"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,8 @@
   "homepage": "https://github.com/llacourciere/contact-card#readme",
   "dependencies": {
     "concurrently": "^7.5.0"
+  },
+  "engines": {
+    "node": "17.0"
   }
 }
