--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.1.3",
-    "idb": "^7.1.1"
+    "idb": "^7.1.1",
+    "webpack-pwa-manifest": "^4.3.0"
   }
 }
